[fix]cookieの有効期限の修正と、老人側ホームの強調表示が必ず画面に表示させるように変更

--- a/careLink/templates/careLink/elder_home.html
+++ b/careLink/templates/careLink/elder_home.html
@@ -138,6 +138,13 @@
             let startIndex = 0; // 表示開始インデックス
             let selectedIndex = -1; // 現在強調表示されているタスクのインデックス
 
+            tasks.forEach((task, index) => {
+                const status = task.querySelector('.status');
+                if (status && status.classList.contains('completed')) {
+                    startIndex = index;
+                }
+            });
+
             // サーバーに達成状態を送信
             function updateCompletion(index, newCompletion) {
                 fetch('/careLink/update_schedule/', {
